(#6358) Fix spacing property

--- a/packages/themes/default/src/global.scss
+++ b/packages/themes/default/src/global.scss
@@ -5,7 +5,7 @@
 		--border-radius: var(--kolibri-border-radius, 5px);
 		--font-family: var(--kolibri-font-family, BundesSans Web, Calibri, Verdana, Arial, Helvetica, sans-serif);
 		--font-size: var(--kolibri-font-size, 16px);
-		--spacing: var(--kolibri-spacing, rem(4));
+		--spacing: var(--kolibri-spacing, #{rem(4)});
 		--border-width: var(--kolibri-border-width, 1px);
 		--color-primary: var(--kolibri-color-primary, #004b76);
 		--color-primary-variant: var(--kolibri-color-primary-variant, #0077b6);
